<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2015 The CyanogenMod Project
     SPDX-FileCopyrightText: 2018-2019 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="livedisplay"
        android:title="@*lineageos.platform:string/live_display_title">

    <!-- Color mode preview -->
    <com.android.settingslib.widget.LayoutPreference
        android:layout="@layout/color_mode_preview"
        android:selectable="false" />

    <!-- Color profile -->
    <ListPreference
            android:key="live_display_color_profile"
            android:title="@string/live_display_color_profile_title"
            android:persistent="false" />

    <ListPreference
            android:key="live_display"
            android:title="@string/live_display_mode"
            android:persistent="false" />

    <!-- Manual temperature selection -->
    <org.lineageos.lineageparts.livedisplay.DisplayTemperature
            android:key="live_display_color_temperature"
            android:title="@string/live_display_color_temperature_title"
            android:dialogTitle="@*lineageos.platform:string/live_display_title"
            android:persistent="false" />

    <!-- Outdoor mode / SRE -->
    <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="display_auto_outdoor_mode"
            android:title="@string/live_display_outdoor_mode_title"
            android:summary="@string/live_display_outdoor_mode_summary"
            android:defaultValue="@*lineageos.platform:bool/config_defaultAutoOutdoorMode" />

    <!-- Anti flicker mode / DC dimming -->
    <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="display_anti_flicker"
            android:title="@string/live_display_anti_flicker_title"
            android:summary="@string/live_display_anti_flicker_summary"
            android:defaultValue="false" />

    <!-- Reading mode -->
    <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="display_reading_mode"
            android:title="@string/live_display_reading_mode_title"
            android:summary="@string/live_display_reading_mode_summary"
            android:defaultValue="false"
            android:persistent="false" />

    <PreferenceCategory
            android:key="advanced"
            android:title="@string/advanced">

        <!-- RGB display color adjustments -->
        <org.lineageos.lineageparts.livedisplay.DisplayColor
                android:key="color_calibration"
                android:title="@string/color_calibration_title"
                android:dialogTitle="@string/color_calibration_title"
                android:summary="@string/color_calibration_summary"
                android:persistent="false"/>

        <!-- HSIC display color adjustments -->
        <org.lineageos.lineageparts.livedisplay.PictureAdjustment
                android:key="picture_adjustment"
                android:title="@string/picture_adjustment_title"
                android:dialogTitle="@string/picture_adjustment_title"
                android:summary="@string/picture_adjustment_summary"
                android:persistent="false"/>

        <!-- Adaptive backlight -->
        <lineageos.preference.LineageSystemSettingSwitchPreference
                android:key="display_low_power"
                android:title="@string/live_display_low_power_title"
                android:summary="@string/live_display_low_power_summary"
                android:defaultValue="@*lineageos.platform:bool/config_defaultCABC" />

        <!-- Color enhancement -->
        <lineageos.preference.LineageSystemSettingSwitchPreference
                android:key="display_color_enhance"
                android:title="@string/live_display_enhance_color_title"
                android:summary="@string/live_display_enhance_color_summary"
                android:defaultValue="@*lineageos.platform:bool/config_defaultColorEnhancement" />

    </PreferenceCategory>

</PreferenceScreen>
