<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2016 The CyanogenMod Project
     SPDX-FileCopyrightText: 2017-2018,2021-2022 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="notification_lights"
        android:title="@string/notification_light_title">

    <lineageos.preference.SystemSettingMainSwitchPreference
        android:key="notification_light_pulse"
        android:title="@string/notification_light_enable_title" />

    <PreferenceCategory
        android:key="general_section"
        android:title="@string/notification_light_general_title">

        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="notification_light_color_auto"
            android:title="@string/notification_light_automagic"
            android:dependency="notification_light_pulse"
            android:defaultValue="true" />

        <org.lineageos.lineageparts.notificationlight.ApplicationLightPreference
            android:key="default"
            android:title="@string/notification_light_default_value"
            android:persistent="false"
            android:dependency="notification_light_pulse" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="brightness_section"
        android:title="@string/light_brightness_title"
        android:dependency="notification_light_pulse" >

        <org.lineageos.lineageparts.notificationlight.NotificationBrightnessPreference
            android:key="notification_light_brightness_level"
            android:title="@string/notification_light_brightness_normal"
            android:dependency="notification_light_pulse" />

        <org.lineageos.lineageparts.notificationlight.NotificationBrightnessZenPreference
            android:key="notification_light_brightness_level_zen"
            android:title="@string/notification_light_brightness_zen"
            android:dependency="notification_light_pulse" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="advanced_section"
        android:title="@string/advanced">

        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="notification_light_screen_on_enable"
            android:title="@string/notification_light_screen_on"
            android:dependency="notification_light_pulse" />

        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="notification_light_pulse_custom_enable"
            android:title="@string/notification_light_use_custom"
            android:dependency="notification_light_pulse" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="phone_list"
        android:title="@string/notification_light_phonelist_title" >

        <org.lineageos.lineageparts.notificationlight.ApplicationLightPreference
            android:key="missed_call"
            android:title="@string/notification_light_missed_call_title"
            android:persistent="false"
            android:dependency="notification_light_pulse_custom_enable" />

        <org.lineageos.lineageparts.notificationlight.ApplicationLightPreference
            android:key="voicemail"
            android:title="@string/notification_light_voicemail_title"
            android:persistent="false"
            android:dependency="notification_light_pulse_custom_enable" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="applications_list"
        android:title="@string/notification_light_applist_title"
        android:dependency="notification_light_pulse_custom_enable" >

        <Preference
            android:key="custom_apps_add"
            android:title="@string/add"
            android:icon="@drawable/ic_add_24dp" />

    </PreferenceCategory>

</PreferenceScreen>
