<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2016 The CyanogenMod Project
     SPDX-FileCopyrightText: 2017,2021-2022 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:lineage="http://schemas.android.com/apk/res-auto"
        android:key="rotation"
        android:title="@string/display_rotation_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="accelerometer"
        android:title="@string/accelerometer_title" />

    <lineageos.preference.LineageSystemSettingSwitchPreference
        android:key="lockscreen_rotation"
        android:title="@string/display_lockscreen_rotation_title"
        android:dependency="accelerometer"
        android:defaultValue="false"
        lineage:requiresConfig="@*android:bool/config_enableLockScreenRotation" />

    <PreferenceCategory
        android:key="display_rotation_category"
        android:title="@string/display_rotation_category_title"
        android:dependency="accelerometer">

        <CheckBoxPreference
            android:key="display_rotation_0"
            android:title="@string/display_rotation_0_title" />

        <CheckBoxPreference
            android:key="display_rotation_90"
            android:title="@string/display_rotation_90_title" />

        <CheckBoxPreference
            android:key="display_rotation_180"
            android:title="@string/display_rotation_180_title" />

        <CheckBoxPreference
            android:key="display_rotation_270"
            android:title="@string/display_rotation_270_title" />

    </PreferenceCategory>

</PreferenceScreen>
