<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2016 The CyanogenMod Project
     SPDX-FileCopyrightText: 2017,2021 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="lineagestats"
    android:title="@string/anonymous_statistics_title">

    <lineageos.preference.LineageSecureSettingSwitchPreference
            android:key="stats_collection"
            android:title="@string/stats_collection_title"
            android:summary="@string/stats_collection_summary"
            android:defaultValue="true" />

    <Preference
        android:title="@string/preview_data_title"
        android:fragment="org.lineageos.lineageparts.lineagestats.PreviewData" />

</PreferenceScreen>
