<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="perf_profile_settings"
    android:title="@string/perf_profile_settings_title" >

    <ListPreference
        android:key="perf_profile"
        android:title="@string/perf_profile_title"
        android:persistent="false" />

    <SwitchPreference
        android:key="power_save"
        android:title="@string/power_save_title"
        android:summary="@string/power_save_summary"
        android:persistent="false" />

    <ListPreference
        android:key="auto_power_save"
        android:title="@string/auto_power_save_title"
        android:persistent="false" />

    <cyanogenmod.preference.CMSecureSettingSwitchPreference
        android:key="app_perf_profiles_enabled"
        android:title="@string/app_perf_profiles_title"
        android:summary="@string/app_perf_profiles_summary" />

</PreferenceScreen>
